--- a/Dodge the Greeps.csproj
+++ b/Dodge the Greeps.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="main\Main.cs" />
     <Compile Include="mob\Mob.cs" />
     <Compile Include="player\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
